@@ -23,6 +23,7 @@ extension SitePickerViewController {
     private func makePrimarySection() -> UIMenu {
         var menuItems = [
             MenuItem.visitSite({ [weak self] in self?.visitSiteTapped() }),
+            MenuItem.shareSite { [weak self] in self?.buttonShareSiteTapped() },
             MenuItem.addSite({ [weak self] in self?.addSiteTapped()} ),
         ]
         if numberOfBlogs() > 1 {
@@ -44,6 +45,22 @@ extension SitePickerViewController {
         UIMenu(options: .displayInline, children: [
             MenuItem.personalizeHome({ [weak self] in self?.personalizeHomeTapped() }).toAction
         ])
+    }
+
+    // MARK: - Actions
+
+    private func buttonShareSiteTapped() {
+        guard let urlString = blog.homeURL as String?,
+              let url = URL(string: urlString) else {
+            assertionFailure("Site has no URL")
+            return
+        }
+        let viewController = UIActivityViewController(activityItems: [url], applicationActivities: nil)
+        if let popover = viewController.popoverPresentationController {
+            popover.barButtonItem = navigationItem.rightBarButtonItem
+        }
+        present(viewController, animated: true, completion: nil)
+        WPAnalytics.trackEvent(.mySiteHeaderShareSiteTapped)
     }
 
     // MARK: - Add site
@@ -123,6 +140,7 @@ extension SitePickerViewController {
 
 private enum MenuItem {
     case visitSite(_ handler: () -> Void)
+    case shareSite(_ handler: () -> Void)
     case addSite(_ handler: () -> Void)
     case switchSite(_ handler: () -> Void)
     case siteTitle(_ handler: () -> Void)
@@ -131,6 +149,7 @@ private enum MenuItem {
     var title: String {
         switch self {
         case .visitSite: return Strings.visitSite
+        case .shareSite: return Strings.shareSite
         case .addSite: return Strings.addSite
         case .switchSite: return Strings.switchSite
         case .siteTitle: return Strings.siteTitle
@@ -141,6 +160,7 @@ private enum MenuItem {
     var icon: UIImage? {
         switch self {
         case .visitSite: return UIImage(systemName: "safari")
+        case .shareSite: return UIImage(systemName: "square.and.arrow.up")
         case .addSite: return UIImage(systemName: "plus")
         case .switchSite: return UIImage(systemName: "arrow.triangle.swap")
         case .siteTitle: return UIImage(systemName: "character")
@@ -151,6 +171,7 @@ private enum MenuItem {
     var toAction: UIAction {
         switch self {
         case .visitSite(let handler),
+             .shareSite(let handler),
              .addSite(let handler),
              .switchSite(let handler),
              .siteTitle(let handler),
@@ -163,6 +184,7 @@ private enum MenuItem {
 private enum Strings {
     static let visitSite = NSLocalizedString("mySite.siteActions.visitSite", value: "Visit site", comment: "Menu title for the visit site option")
     static let addSite = NSLocalizedString("mySite.siteActions.addSite", value: "Add site", comment: "Menu title for the add site option")
+    static let shareSite = NSLocalizedString("mySite.siteActions.shareSite", value: "Share site", comment: "Menu title for the share site option")
     static let switchSite = NSLocalizedString("mySite.siteActions.switchSite", value: "Switch site", comment: "Menu title for the switch site option")
     static let siteTitle = NSLocalizedString("mySite.siteActions.siteTitle", value: "Change site title", comment: "Menu title for the change site title option")
     static let siteIcon = NSLocalizedString("mySite.siteActions.siteIcon", value: "Change site icon", comment: "Menu title for the change site icon option")
